--- a/lib/template.html
+++ b/lib/template.html
@@ -72,7 +72,7 @@ function init () {
       slides[current].style.display = 'block';
     }
 
-    console.log('current slide: ' + current);
+    // console.log('current slide: ' + current);
   });
 }
 
